--- a/index.html
+++ b/index.html
@@ -229,6 +229,14 @@
                         <p>
                             <strong>12- unnamed project</strong><br>
                             usa based tech company. soon...
+                        </p>
+
+                        <!-- Comments Section -->
+                        <div class="comments-section">
+                            <h3 class="comments-title">comments</h3>
+                            <div id="comments-startups-2025-12-27"></div>
+                            <div id="comment-form-container-startups-2025-12-27"></div>
+                        </div>
                     </div>
                 </div>
             </article>
@@ -252,6 +260,13 @@
                             <strong>cities i lived</strong><br>
                             ankara · istanbul · sapanca · basel · brussels · oslo
                         </p>
+
+                        <!-- Comments Section -->
+                        <div class="comments-section">
+                            <h3 class="comments-title">comments</h3>
+                            <div id="comments-about-2025-12-27"></div>
+                            <div id="comment-form-container-about-2025-12-27"></div>
+                        </div>
                     </div>
                 </div>
             </article>
@@ -275,6 +290,13 @@
                             <strong>shut up and write</strong><br>
                             15+ events and ongoing. a community initiative to help people focus on their writing goals.
                         </p>
+
+                        <!-- Comments Section -->
+                        <div class="comments-section">
+                            <h3 class="comments-title">comments</h3>
+                            <div id="comments-social-2025-12-20"></div>
+                            <div id="comment-form-container-social-2025-12-20"></div>
+                        </div>
                     </div>
                 </div>
             </article>
@@ -303,6 +325,13 @@
                             <strong>my articles</strong><br>
                             writing about entrepreneurship, technology, and building things.
                         </p>
+
+                        <!-- Comments Section -->
+                        <div class="comments-section">
+                            <h3 class="comments-title">comments</h3>
+                            <div id="comments-work-2025-12-15"></div>
+                            <div id="comment-form-container-work-2025-12-15"></div>
+                        </div>
                     </div>
                 </div>
             </article>
@@ -321,12 +350,14 @@
                 <a href="https://www.linkedin.com/in/oocak/" target="_blank">linkedin</a>
                 <a href="https://www.youtube.com/@ozzyocak" target="_blank">youtube</a>
                 <a href="https://github.com/omaycompany" target="_blank">github</a>
+                <a href="mailto:ozzyocak@gmail.com" target="_blank">email</a>
             </div>
             <p class="copyright">© 2026 ozzy ocak</p>
         </footer>
     </div>
 
     <script src="script.js"></script>
+    <script src="comments.js"></script>
 </body>
 
 </html>
