--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="robot.css">
 </head>
 
 <body>
@@ -359,6 +360,7 @@
 
     <script src="script.js"></script>
     <script src="comments.js"></script>
+    <script src="robot.js"></script>
 </body>
 
 </html>
